# requirementsengineering

./: .gitignore  pyproject.toml
src/example/.requirements/: requirements-01.md
src/example/.resources/: knowledgebase.md
src/requirementsengineering/example/.resources/: knowledgebase.md
