[project]
name = "requirementsengineering"
version = "0.1.0"
description = ""
authors = [
    {name = "Oce4nM4n",email = "ayushmansihag@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "requirementsengineering", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
